--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,12 +28,13 @@ jobs:
         pip install pytest pytest-cov click
         pip install -e .
     
-    - name: Run tests
-      run: |
-        pytest tests/ -v --cov=faviconx --cov-report=xml
-    
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
-        fail_ci_if_error: true 
+        fail_ci_if_error: true
+        token: ${{ secrets.CODECOV_TOKEN }} 
+
+    - name: Run tests
+      run: |
+        pytest tests/ -v --cov=faviconx --cov-report=xml
